--- a/Pedra-papel-Tesoura/style.css
+++ b/Pedra-papel-Tesoura/style.css
@@ -4,25 +4,35 @@
     box-sizing: border-box;
 }
 
+
 .container-align{
     display: flex;
-
+    width: 100%;
 }
 
-.player-options h3{
-    text-align: justify;
-    max-width: 200px;
+.boas-vindas{
+    background-color: #333;
 }
+.boas-vindas h1{
+    font-size: 40px;
+    padding: 6px 0px;
+    color: white;
+    font-weight: 600;
+}
+
 .enemy-options img, .player-options img{
-    max-width: 190px;
+    max-width: 155px;
     margin-left: 10px;
-    opacity: 0.4;
+    opacity: 0.7;
 }
 
 .enemy-options, .player-options{
-      width: 50%;
+      width: 100%;
+      text-align: center;
 }
 
 .vencedor {
     text-align: center;
+    font-size: 35px;
+    margin-top: 30px;
 }
